Fixes Image Alignment for Mobile Displays

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -14,13 +14,13 @@
     padding-right: 0.5rem;
   }
 
-.Browser-Project-Container{
+
+.Browser-Project-Container {
     display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-    background-color: aquamarine;
-    padding: 5px;
-  }
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+}
 
 .Homepage-Background{
   display: flex;
@@ -54,7 +54,7 @@
 
 
 
-  .Content {
+.Content {
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -135,12 +135,7 @@
   width: 275px; 
   }
 
-  .Browser-Project-Container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Centers content vertically */
-    align-items: center; /* Centers content horizontally */
-}
+
 
   
 }
@@ -149,17 +144,20 @@
 @media (min-width: 475px) {
     .container {
       max-width: 475px;
+      border: 2px solid blue;
     }
     .Homepage-Content{
       padding: 5%;
       width: 40%;
     }
+
 }
   
 /* sm */
   @media (min-width: 640px) {
     .container {
       max-width: 640px;
+      border: 2px solid red;
     }
   }
   
@@ -167,6 +165,14 @@
   @media (min-width: 768px) {
     .container {
       max-width: 768px;
+      border: 2px solid green;
+    }
+    .Browser-Project-Container{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin-bottom: 20px;
+    
     }
   }
   
